--- a/ProjectTwo/ProjectTwo/Base.lproj/LaunchScreen.storyboard
+++ b/ProjectTwo/ProjectTwo/Base.lproj/LaunchScreen.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main" translatesAutoresizingMaskIntoConstraints="NO" id="AwG-Rn-vK6">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main" translatesAutoresizingMaskIntoConstraints="NO" id="AwG-Rn-vK6">
                                 <rect key="frame" x="156" y="155" width="289" height="289"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="289" id="Rwh-Fa-6IV"/>
@@ -30,7 +30,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.99215686274509807" green="0.99215686274509807" blue="0.99215686274509807" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="AwG-Rn-vK6" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="1GH-eN-fDv"/>
                             <constraint firstItem="AwG-Rn-vK6" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="135" id="UDX-P0-1Tl"/>
